...
    if (!permissionGranted) {
      navigationActions.navigateTo(Screen.PERMISSION_HANDLER)
    }
  }

  Scaffold(
      modifier = Modifier.testTag("barcodeScannerScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { selected -> navigationActions.navigateTo(selected) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = Route.SCANNER)
      }) { paddingValues ->
        if (permissionGranted) {
          Box(
              modifier =
                  Modifier.fillMaxSize().padding(paddingValues).testTag("cameraPreviewBox")) {
                // State variables
                val barcodeScanned = remember { mutableStateOf<String?>(null) }
                val foodScanned = remember { mutableStateOf(false) }
                val foodFacts = remember { mutableStateOf<FoodFacts?>(null) }
                val isScanning by isScanningState
                val searchInProgress = remember { mutableStateOf(false) }
...
        verticalArrangement = Arrangement.Top) {
          Spacer(modifier = Modifier.height(16.dp))

          ExposedDropdownMenuBox(
              expanded = locationExpanded,
              onExpandedChange = { locationExpanded = !locationExpanded },
              modifier = Modifier.testTag("locationDropdown")) {
                OutlinedTextField(
                    value = location.name.lowercase(),
                    onValueChange = {},
                    label = { Text("Location") },
                    readOnly = true,
                    trailingIcon = {
...
          OutlinedTextField(
              value = expireDate,
              onValueChange = { expireDate = it },
              label = { Text("Expire Date") },
              placeholder = { Text(dateFormat) },
              modifier =
                  Modifier.fillMaxWidth().padding(bottom = 16.dp).testTag("expireDateTextField"))

          OutlinedTextField(
              value = openDate,
              onValueChange = { openDate = it },
              label = { Text("Open Date") },
              placeholder = { Text(dateFormat) },
              modifier =
                  Modifier.fillMaxWidth().padding(bottom = 16.dp).testTag("openDateTextField"))

          OutlinedTextField(
              value = buyDate,
              onValueChange = { buyDate = it },
              label = { Text("Buy Date") },
              placeholder = { Text(dateFormat) },
              modifier =
                  Modifier.fillMaxWidth().padding(bottom = 32.dp).testTag("buyDateTextField"))

          Button(
              onClick = {
                val newFoodItem =
                    FoodItem(
                        uid = foodItemViewModel.getUID(),
...
                        buyDate = formatDateToTimestamp(buyDate),
                        // Logic to determine status depending on the dates given
                    )
                houseHoldViewModel.addFoodItem(newFoodItem)
                onFinish() // Call the callback to remove the screen and resume scanning
              },
              modifier = Modifier.fillMaxWidth().height(50.dp).testTag("submitButton")) {
                Text(text = "Submit", fontSize = 18.sp)
              }
          Spacer(modifier = Modifier.height(16.dp))
          Button(
              onClick = {
                // Reset the scanned food item
                onFinish() // Call the callback to remove the screen and resume scanning
              },
              modifier = Modifier.fillMaxWidth().height(50.dp).testTag("cancelButton")) {
                Text(text = "Cancel", fontSize = 18.sp)
              }
        }
  }
}

...
